--- a/main.html
+++ b/main.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-M5JGW9K');</script>
+    <!-- End Google Tag Manager -->
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="title" content=" AK 홀딩스" />
+    <meta name="description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다." />
+    <meta name="keywords" content="AK 홀딩스"/>
+    <meta name="og:site_name" content="AK 홀딩스" />
+    <meta name="og:title" content="AK 홀딩스" />
+    <meta name="og:description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다."/>
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <title>AK 홀딩스</title>
 </head>
 <body>
-<header>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M5JGW9K"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+<header class="top">
     <div class="head">
         <h1><a href="#"><img src="./images/logo_w.png" alt="AK 홀딩스 로고"><img src="./images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
         <div class="quick-menu">
@@ -150,7 +168,106 @@
         </ul>
     </nav>
 </header>
-<main></main>
+<main class="main">
+    <section class="top-visual">
+        <div class="video-box">
+            <video muted autoplay loop poster="./videos/Mo_AK_Main.mp4" class="mo">
+                <source src="./videos/Mo_AK_Main.mp4" type="video/mp4">
+                <strong>Your browser does not support the video tag.</strong>
+            </video>
+            <video muted autoplay loop poster="./videos/Web_AK_Main_000.jpg" class="pc">
+                <source src="./videos/Web_AK_Main.mp4" type="video/mp4">
+                <strong>Your browser does not support the video tag.</strong>
+            </video>
+        </div>
+        <div class="typo-box">
+            <div>
+                앞서가는 <strong>사고</strong>,<br>
+                앞서가는 <strong>기술</strong>,<br>
+                앞서가는 <strong>경영</strong>으로<br>
+                <p>
+                    <strong>풍요롭고 행복한</strong><br>
+                    <strong>삶을 창조합니다</strong>
+                </p>
+            </div>
+        </div>
+        <button class="btn-scroll-down tk-arboria" onClick="scrollDown()">SCROLL DOWN</button>
+    </section>
+    <section class="news-room">
+        <div class="news-top">
+            <h2>#NEWSROOM</h2>
+            <div class="btn-box">
+                <h3><a href="#">애경뉴스</a></h3>
+                <h3><a href="#">웹진</a></h3>
+            </div>
+        </div>
+        <div class="ak-news-list">
+            <h3>애경의 주요한 소식과<br>
+                계열사 별 주요 행사와 기쁜 일을<br>
+                함께합니다</h3>
+            <ul>
+                <li>
+                    <a href="#">
+                        <div>
+                            <h4>애경케미칼</h4>
+                            <p class="con">'줍깅, 함께해요' 건강과 환경을<br>
+                                함께 생각하는 애경케미칼!</p>
+                            <p class="date">2022.04.01</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div>
+                            <h4>웹진 8호(vol.431)</h4>
+                            <p class="con">화학 3사 통합,<br>
+                                '애경케미칼(가칭)' 출범</p>
+                            <p class="date">2022.10.26</p>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section class="esg">
+        <div class="esg-top">
+            <h2>#ESG</h2>
+            <div class="btn-box">
+                <h3><a href="#">ESG 경영</a></h3>
+                <h3><a href="#">ESG 소식</a></h3>
+                <h3><a href="#">윤리경영</a></h3>
+                <h3><a href="#">애경복지재단</a></h3>
+            </div>
+        </div>
+        <div class="esg-list">
+            <ul>
+                <li>
+                    <a href="#">
+                        <div>
+                            <h4>ESG 경영 목표</h4>
+                            <p class="con">지속가능한 사회를 구축하는데<br>
+                                앞장서겠습니다</p>
+                            <p class="img">
+                                <img src="./images/bg_main_esg_list01.png" alt="">
+                            </p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div>
+                            <h4>ESG 소식</h4>
+                            <p class="con">각 계열사만의 특성을 발휘하여,<br>
+                                사회적 가치를 꾸준히 실현하고<br>
+                                있습니다</p>
+                            <p class="img"></p>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </section>
+</main>
 <footer>
     <div class="info">
         <h1><a href="#">AK홀딩스(주)</a></h1>
@@ -166,9 +283,25 @@
         </p>
     </div>
 </footer>
-<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
-        integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
         crossorigin="anonymous"></script>
 <script src="./js/common.js"></script>
+<script>
+    //init
+    $(function () {
+        console.log(AKCOMMON)
+        setTimeout(function () {
+            AKCOMMON.topEffect = true;
+        }, 100);
+    });
+    //scrollDown
+    function scrollDown() {
+        console.log($('.news-room').offset().top)
+        $('html, body').animate({
+            scrollTop: $('.news-room').offset().top + 'px'
+        }, 300);
+    }
+</script>
 </body>
 </html>
