--- a/main.html
+++ b/main.html
@@ -182,11 +182,11 @@
         </div>
         <div class="typo-box">
             <div>
-                앞서가는 <strong>사고</strong>,<br>
-                앞서가는 <strong>기술</strong>,<br>
-                앞서가는 <strong>경영</strong>으로<br>
+                앞서가는 <strong>사고</strong>,<br class="mo">
+                앞서가는 <strong>기술</strong>,<br class="mo">
+                앞서가는 <strong>경영</strong>으로
                 <p>
-                    <strong>풍요롭고 행복한</strong><br>
+                    <strong>풍요롭고 행복한</strong><br class="mo">
                     <strong>삶을 창조합니다</strong>
                 </p>
             </div>
