--- a/introduce_history.html
+++ b/introduce_history.html
@@ -11,15 +11,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="title" content="2021년 손익계산서 | AK 홀딩스" />
+    <meta name="title" content="Corporate Identity | AK 홀딩스" />
     <meta name="description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다." />
-    <meta name="keywords" content="AK 홀딩스, AK, 홀딩스, 손익계산서" />
-    <meta name="og:site_name" content="AK 홀딩스 손익계산서" />
-    <meta name="og:title" content="AK 홀딩스 손익계산서" />
+    <meta name="keywords" content="AK 홀딩스, AK, 홀딩스, Corporate Identity" />
+    <meta name="og:site_name" content="AK 홀딩스 Corporate Identity" />
+    <meta name="og:title" content="AK 홀딩스 Corporate Identity" />
     <meta name="og:description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다."/>
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <title>회사 소개 | AK 홀딩스</title>
+    <title>연혁 | AK 홀딩스</title>
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
@@ -77,7 +77,6 @@
                     </li>
                 </ul>
             </li>
-            <em></em>
             <li>
                 <h3><a href="#">애경 ESG</a></h3>
                 <ul>
@@ -104,7 +103,6 @@
                     </li>
                 </ul>
             </li>
-            <em></em>
             <li>
                 <h3><a href="#">뉴스룸</a></h3>
                 <ul>
@@ -126,7 +124,6 @@
                     </li>
                 </ul>
             </li>
-            <em></em>
             <li>
                 <h3><a href="#">IR</a></h3>
                 <ul>
@@ -165,16 +162,15 @@
 <!--visual 영역-->
 <div class="topArea sub">
     <div class="titArea">
-        <h2 class="tit">회사 소개</h2>
-        <p class="desc">AK홀딩스의 기업 정보를 확인하실 수 있습니다</p>
+        <h2 class="tit">연혁</h2>
+        <p class="desc">변천하여 온 애경의 역사를 소개합니다</p>
     </div>
-    <div class="visual has-tab intro-company" style="background-image:url(../ak/images/img_introduce_company.png)">
+    <div class="visual intro has-tab" style="background-image:url(../ak/images/img_introduce.png)">
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
-                <li class="active"><a href="javascript:;">CEO Message</a></li>
-                <li class="tow-nd"><a href="javascript:;">홀딩스 역할</a></li>
-                <li class="tow-nd"><a href="javascript:;">거버넌스 구조</a></li>
+                <li class="active"><a href="javascript:;">의미</a></li>
+                <li><a href="javascript:;">로고 규정</a></li>
             </ul>
         </div>
     </div>
@@ -182,77 +178,37 @@
 <!--//visual 영역-->
 <!--본문영역-->
 <div class="content">
-    <div class="ceo-message">
-        <p class="cont_tit"><em>사랑(愛)과 존경(敬)의 정신을 바탕으로</em><br>
-            다양한 이해관계자, 그리고 고객과 함께<br>
-            꾸준히 성장해 나가겠습니다.</p>
-        <div class="ceo-img-wrap">
-            <span class="img-wrap">
-                <img src="../ak/images/img_ceo.png" alt="애경홀딩스 대표이사 이석주 사진">
-            </span>
-            <p class="name">애경홀딩스 대표이사 <em>이</em><em>석</em><em>주</em></p>
+    <div class="cont">
+        <div class="intro-ci">
+            <div class="tit-wrap">
+                <em class="cont_tit">심벌마크의 의미</em>
+                <p class="desc">
+                    AK의 심벌마크의 영문 ‘A’와 ‘K’는<br class="mo">
+                    세계 속으로 무한히 도약하는 애경을,<br>
+                    하단 부분의 곡선은<br class="mo">
+                    ‘역동적으로 파도치는 맑고 큰 물결’로<br>
+                    21세기 변화를 주도하는 진취적, 미래지향적<br class="mo">
+                    애경의 의지 표명하였습니다.
+                </p>
+            </div>
+            <div class="ci-wrap">
+                <span class="symbol">
+                    <img src="../ak/images/img_symbol.png" alt="ak홀딩스 심볼마크">
+                </span>
+                <span class="symbol-size">
+                    <img src="../ak/images/img_symbol_size.png" alt="ak홀딩스 심볼마크 최소크기">
+                </span>
+                <p class="comment">※ 심벌마크를 단독으로 사용하는 것을 허용하지 않습니다.</p>
+            </div>
+            <ul class="download-wrap">
+                <li>
+                    <a href="javascript:;" class="btn-download">AI 파일 다운로드</a>
+                </li>
+                <li>
+                    <a href="javascript:;" class="btn-download">JPG 파일 다운로드</a>
+                </li>
+            </ul>
         </div>
-        <p class="desc">
-            애경그룹은 지난 68년간 고객의 신뢰 속에서<br>
-            다양한 이해관계자들과 협력하며 지속적인<br class="mo">
-            성장을 이루어 왔습니다.<br><br>
-            꾸준한 믿음과 사랑을 보내주시는 여러분께깊은 감사 드립니다.<br><br>
-            애경그룹은 팬데믹을 지나 새로운 도약을
-            준비하며 견고한 100년 애경이 되기 위해
-            노력하고 있습니다.<br class="pc">언제나 기본에 충실함을
-            잊지 않고 포용과 협력의 정신으로 지속 가능한 기업이 되기 위해 최선을 다하겠습니다.
-        </p>
-    </div>
-    <div class="message-list">
-        <ul>
-            <li>
-                <em class="tit">기본에 충실한 애경</em>
-                <p class="desc">사랑과 존경에 대한 철학은 애경의 기업이념이자,
-                    인간과 미래의 행복을 추구하는 ESG의 정신과도
-                    닮아 있습니다.<br>
-                    이에, 지속가능경영을 위한 ESG의 실천은 곧
-                    애경의 소명이자 존재의 이유입니다.<br>
-                    기업이 법적, 윤리적 책임을 다할 때에 그룹의
-                    지속성장을 이룰 수 있다는 믿음을 바탕으로
-                    준법경영을 실천하며 원칙과 절차를 충실히
-                    이행해 나가고 있습니다. 더불어 AK홀딩스는
-                    사외이사 주도의 거버넌스 위원회를 설치해
-                    지배구조의 투명성 제고 및 주주가치 극대화를
-                    실행하고 있으며, 각 계열사 경영진과 함께
-                    환경(E) 및 인권(S) 관련 개선과제를 제시하며
-                    실행하고 있습니다.
-                </p>
-            </li>
-            <li>
-                <em class="tit">포용과 협력의 애경</em>
-                <p class="desc">사람에 대한 배려와 다양성을 존중하는 애경은
-                    이해관계자를 존중하고 환경을 보호하며 사회적
-                    책임을 다하여 공생의 가치를 실현합니다.
-                    다양성을 이해하고 포용하는 조직은 개인의
-                    역량을 최대한 발휘하고 창의력과 혁신을 발산할
-                    수 있는 힘을 가집니다. 대내외의 이해관계자와
-                    협력하며 더 큰 시너지를 만들어 가겠습니다.
-                </p>
-            </li>
-            <li>
-                <em class="tit">그 이상의 도전</em>
-                <p class="desc">애경은 생활용품사업으로 시작하여 화학·유통·
-                    부동산·항공·IT에 이르기까지 사업을
-                    다각화하며 꾸준히 성장해 왔습니다.
-                    미래 생존을 위해 우리의 고유가치는 견고히
-                    다지면서 그 이상의 용기와 도전을 보여야 할
-                    때라고 생각합니다. 각 계열사의 역량을 더욱
-                    강화하고 차별화된 전략과 실행력으로
-                    기업가치를 제고하고, 고객·사회·주주·구성원·
-                    협력사로부터 신뢰받는 지속가능경영 체계를
-                    만들기 위해 노력하겠습니다.
-                </p>
-            </li>
-        </ul>
-    </div>
-    <div class="catchphrase">
-        <img src="../ak/images/img_copy_mo.png" alt="사랑합니다. 그리고존경합니다." class="mo">
-        <img src="../ak/images/img_copy_pc.png" alt="사랑합니다. 그리고존경합니다." class="pc">
     </div>
 </div>
 <!--//본문영역-->
