--- a/main.html
+++ b/main.html
@@ -203,14 +203,14 @@
         </div>
         <div class="ak-news-list">
             <h3>애경의 주요한 소식과<br>
-                계열사 별 주요 행사와 기쁜 일을<br>
+                계열사 별 주요 행사와 기쁜 일을<br class="mo">
                 함께합니다</h3>
             <ul>
                 <li>
                     <a href="#">
                         <div>
                             <h4>애경케미칼</h4>
-                            <p class="con">'줍깅, 함께해요' 건강과 환경을<br>
+                            <p class="con">'줍깅, 함께해요' 건강과<br class="pc"> 환경을<br class="mo">
                                 함께 생각하는 애경케미칼!</p>
                             <p class="date">2022.04.01</p>
                         </div>
@@ -248,7 +248,7 @@
                             <p class="con">지속가능한 사회를 구축하는데<br>
                                 앞장서겠습니다</p>
                             <p class="img">
-                                <img src="./images/bg_main_esg_list01.png" alt="">
+                                <img src="./images/bg_main_esg_list01.png" alt="" class="mo">
                             </p>
                         </div>
                     </a>
@@ -258,7 +258,7 @@
                         <div>
                             <h4>ESG 소식</h4>
                             <p class="con">각 계열사만의 특성을 발휘하여,<br>
-                                사회적 가치를 꾸준히 실현하고<br>
+                                사회적 가치를 꾸준히 실현하고<br class="mo">
                                 있습니다</p>
                             <p class="img"></p>
                         </div>
