--- a/introduce_history.html
+++ b/introduce_history.html
@@ -165,49 +165,64 @@
         <h2 class="tit">연혁</h2>
         <p class="desc">변천하여 온 애경의 역사를 소개합니다</p>
     </div>
-    <div class="visual intro has-tab" style="background-image:url(../ak/images/img_introduce.png)">
-        <div class="top-tab">
-            <ul>
-                <!-- active: 활성화시 li에 .active 추가 -->
-                <li class="active"><a href="javascript:;">의미</a></li>
-                <li><a href="javascript:;">로고 규정</a></li>
-            </ul>
+    <div class="visual intro-history">
+        <div class="desc">
+            애경그룹의 모태가 된 애경유지공업의 영등포공장 1960년대 전경
         </div>
     </div>
 </div>
 <!--//visual 영역-->
 <!--본문영역-->
 <div class="content">
-    <div class="cont">
-        <div class="intro-ci">
-            <div class="tit-wrap">
-                <em class="cont_tit">심벌마크의 의미</em>
-                <p class="desc">
-                    AK의 심벌마크의 영문 ‘A’와 ‘K’는<br class="mo">
-                    세계 속으로 무한히 도약하는 애경을,<br>
-                    하단 부분의 곡선은<br class="mo">
-                    ‘역동적으로 파도치는 맑고 큰 물결’로<br>
-                    21세기 변화를 주도하는 진취적, 미래지향적<br class="mo">
-                    애경의 의지 표명하였습니다.
-                </p>
-            </div>
-            <div class="ci-wrap">
-                <span class="symbol">
-                    <img src="../ak/images/img_symbol.png" alt="ak홀딩스 심볼마크">
-                </span>
-                <span class="symbol-size">
-                    <img src="../ak/images/img_symbol_size.png" alt="ak홀딩스 심볼마크 최소크기">
-                </span>
-                <p class="comment">※ 심벌마크를 단독으로 사용하는 것을 허용하지 않습니다.</p>
-            </div>
-            <ul class="download-wrap">
-                <li>
-                    <a href="javascript:;" class="btn-download">AI 파일 다운로드</a>
-                </li>
-                <li>
-                    <a href="javascript:;" class="btn-download">JPG 파일 다운로드</a>
-                </li>
+    <div class="history-cont">
+        <div class="history-tab"><!-- 열렸을 때 -->
+            <ul class="selected-tab">
+                <li class="active"><span>2020 ~ 현재</span></li><!-- 선택된 탭에 active추가 -->
+                <li><span>2010 ~ 2019</span></li>
+                <li><span>2000 ~ 2009</span></li>
+                <li><span>1990 ~ 1999</span></li>
+                <li><span>1980 ~ 1989</span></li>
+                <li><span>1970 ~ 1979</span></li>
+                <li><span>1960 ~ 1969</span></li>
+                <li><span>1945 ~ 1959</span></li>
             </ul>
+            <ul class="select-tab">
+                <li><span>2020 ~ 현재</span></li>
+                <li><span>2010 ~ 2019</span></li>
+                <li><span>2000 ~ 2009</span></li>
+                <li><span>1990 ~ 1999</span></li>
+                <li><span>1980 ~ 1989</span></li>
+                <li><span>1970 ~ 1979</span></li>
+                <li><span>1960 ~ 1969</span></li>
+                <li><span>1945 ~ 1959</span></li>
+            </ul>
+        </div>
+        <div class="history-wrap">
+            <div class="year-wrap">
+                <em class="year">2022</em>
+                <ul>
+                    <li>
+                        <span class="month">03</span>
+                        <p>애경산업 AGE 20’s 대한민국 마케팅대상</p>
+                        <p>디지털고객만족도 여성화장품부문1위 수상</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="year-wrap">
+                <em class="year">202</em>
+                <ul>
+                    <li>
+                        <span class="month">12</span>
+                        <p>AK홀딩스 AKIS 자회사 편입</p>
+                    </li>
+                    <li>
+                        <span class="month">11</span>
+                        <p>애경산업 2021년 ESG종합등급 A획득</p>
+                        <p>애경산업 용인물류센터 준공</p>
+                        <img src="../ak/images/img_2021_11.png" alt="">
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
