--- a/main.html
+++ b/main.html
@@ -206,7 +206,9 @@
                 계열사 별 주요 행사와 기쁜 일을<br class="mo">
                 함께합니다</h3>
             <ul>
-                <li>
+                <!-- 개발 연동 영역 -->
+                <!-- style background 역역 이미지 교체 필요-->
+                <li style="background: url(./images/bg_main_newslist01.png) no-repeat center center;">
                     <a href="#">
                         <div>
                             <h4>애경케미칼</h4>
@@ -216,7 +218,8 @@
                         </div>
                     </a>
                 </li>
-                <li>
+
+                <li style="background: url(./images/bg_main_newslist02.png) no-repeat center center;">
                     <a href="#">
                         <div>
                             <h4>웹진 8호(vol.431)</h4>
@@ -226,6 +229,7 @@
                         </div>
                     </a>
                 </li>
+                <!-- //개발 연동 영역 -->
             </ul>
         </div>
     </section>
