--- a/introduce_history.html
+++ b/introduce_history.html
@@ -277,6 +277,45 @@
                     </li>
                 </ul>
             </div>
+            <div class="year-wrap">
+                <em class="year">2020</em>
+                <ul>
+                    <li>
+                        <span class="month">06</span>
+                        <div class="desc">
+                            <p>애경화학 청양공장 PSM S등급 획득(현 애경케미칼)</p>
+                            <p>애경산업 AGE 20’s 아마존 입점 및 아마존 초이스 획득</p>
+                        </div>
+                    </li>
+                    <li>
+                        <span class="month">04</span>
+                        <div class="desc">
+                            <p>애경산업 중국 ‘티몰 글로벌 TG1000 파트너 서밋’ 국제부문 2개상 수상</p>
+                            <p>AK켐텍 물적분할 통해 ‘애경특수도료’ 설립</p>
+                        </div>
+                    </li>
+                    <li>
+                        <span class="month">03</span>
+                        <div class="desc">
+                            <p>제주항공 김포~여수, 여수~제주 노선 신규취항</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="year-wrap">
+                <em class="year">2019</em>
+                <ul>
+                    <li>
+                        <span class="month">12</span>
+                        <div class="desc">
+                            <p>HIEX 서울 홍대, 매출 100억 달성</p>
+                            <div class="img">
+                                <img src="../ak/images/img_2021_04.png" alt="">
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
