--- a/main.html
+++ b/main.html
@@ -11,12 +11,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="title" content=" AK 홀딩스" />
-    <meta name="description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다." />
-    <meta name="keywords" content="AK 홀딩스"/>
+    <meta name="title" content="AK 홀딩스" />
+    <meta name="description" content="애경그룹 및 계열사 소개, ESG, 뉴스룸, IR 정보 제공" />
+    <meta name="keywords" content="애경, AK 홀딩스, AK, 애경 그룹, 애경 그룹지주사, 애경산업, AK플라자, 애경케미칼, 제주항공, 중부CC"/>
     <meta name="og:site_name" content="AK 홀딩스" />
     <meta name="og:title" content="AK 홀딩스" />
-    <meta name="og:description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다."/>
+    <meta name="og:description" content="앞서가는 사고, 앞서가는 기술, 앞서가는 경영"/>
+    <meta property="og:image" content="http://jdcomp.pw/og_thumb.png" />
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>AK 홀딩스</title>
@@ -26,15 +27,16 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M5JGW9K"
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+
 <header class="top">
     <div class="head">
-        <h1><a href="#"><img src="./images/logo_w.png" alt="AK 홀딩스 로고"><img src="./images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
+        <h1><a href="http://jdcomp.pw"><img src="./images/logo_w.png" alt="AK 홀딩스 로고"><img src="./images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
         <div class="quick-menu">
             <ul>
-                <li><a href="#">그룹 소개</a></li>
-                <li><a href="#">애경 ESG</a></li>
-                <li><a href="#">뉴스룸</a></li>
-                <li><a href="#">IR</a></li>
+                <li><a href="http://jdcomp.pw/introduce_ceo.html">그룹 소개</a></li>
+                <li><a href="http://jdcomp.pw/esg_management_goal.html">애경 ESG</a></li>
+                <li><a href="http://jdcomp.pw/ak_news.html">뉴스룸</a></li>
+                <li><a href="http://jdcomp.pw/ir_governance.html">IR</a></li>
             </ul>
         </div>
         <button class="btn-show-menu" id="btnShowMenu" />
@@ -47,82 +49,74 @@
                     <li>
                         <ul>
                             <!-- 메뉴 활성화시 아래 li에 .active 추가 -->
-                            <li><a href="#">애경 가치</a></li>
-                            <li><a href="#">창업이념</a></li>
-                            <li><a href="#">인재상</a></li>
-                            <li><a href="#">가치체계도</a></li>
-                            <li><a href="#">인재상</a></li>
-                            <li><a href="#">가치체계도</a></li>
-                            <li><a href="#">미션과 비전</a></li>
+                            <li><a href="http://jdcomp.pw/value_founded.html">애경 가치</a></li>
+                            <li><a href="http://jdcomp.pw/value_founded.html">창업이념</a></li>
+                            <li><a href="http://jdcomp.pw/value_management">경영이념</a></li>
+                            <li><a href="http://jdcomp.pw/value_talent">인재상</a></li>
+                            <li class="tow-nd"><a href="#">가치체계도</a></li>
+                            <li class="tow-nd"><a href="#">미션과 비전</a></li>
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="#">Corporate Identity</a></li>
-                            <li><a href="#">의미</a></li>
-                            <li><a href="#">로고 규정</a></li>
+                            <li><a href="http://jdcomp.pw/introduce_ci.html">Corporate Identity</a></li>
+                            <li><a href="http://jdcomp.pw/introduce_ci.html">의미</a></li>
+                            <li class="tow-nd"><a href="#">로고 규정</a></li>
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="#">회사 소개</a></li>
-                            <li><a href="#">CEO Message</a></li>
-                            <li><a href="#">홀딩스 역할</a></li>
-                            <li><a href="#">거버넌스 구조</a></li>
+                            <li><a href="http://jdcomp.pw/introduce_ceo.html">회사 소개</a></li>
+                            <li><a href="http://jdcomp.pw/introduce_ceo.html">CEO Message</a></li>
+                            <li class="tow-nd"><a href="#">홀딩스 역할</a></li>
+                            <li class="tow-nd"><a href="#">거버넌스 구조</a></li>
                         </ul>
-                        <em></em>
-                        <ul>
+                        <ul class="tow-nd">
                             <li><a href="#">계열사 소개</a></li>
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="#">연혁</a></li>
+                            <li><a href="http://jdcomp.pw/introduce_history.html">연혁</a></li>
                         </ul>
                     </li>
                 </ul>
             </li>
-            <em></em>
             <li>
                 <h3><a href="#">애경 ESG</a></h3>
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="#">ESG 경영</a></li>
-                            <li><a href="#">ESG 경영 목표</a></li>
-                            <li><a href="#">ESG 등급</a></li>
-                            <li><a href="#">다양성과 포용성</a></li>
-                            <li><a href="#">ESG 추진체계(조직)</a></li>
-                            <li><a href="#">지속가능경영 보고서</a></li>
+                            <li><a href="http://jdcomp.pw/esg_management_goal.html">ESG 경영</a></li>
+                            <li><a href="http://jdcomp.pw/esg_management_goal.html">ESG 경영 목표</a></li>
+                            <li><a href="http://jdcomp.pw/esg_management_level.html">ESG 등급</a></li>
+                            <li class="tow-nd"><a href="#">다양성과 포용성</a></li>
+                            <li class="tow-nd"><a href="#">ESG 추진체계(조직)</a></li>
+                            <li class="tow-nd"><a href="#">지속가능경영 보고서</a></li>
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="#">ESG 소식</a></li>
+                            <li><a href="http://jdcomp.pw/esg_news.html">ESG 소식</a></li>
                         </ul>
-                        <em></em>
-                        <ul>
+                        <ul class="tow-nd">
                             <li><a href="#">윤리경영</a></li>
                             <li><a href="#">윤리제보관리시스템</a></li>
                         </ul>
-                        <em></em>
-                        <ul>
+                        <ul class="tow-nd">
                             <li><a href="#">애경복지재단</a></li>
                         </ul>
                     </li>
                 </ul>
             </li>
-            <em></em>
             <li>
                 <h3><a href="#">뉴스룸</a></h3>
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="#">애경뉴스</a></li>
+                            <li><a href="http://jdcomp.pw/ak_news.html">애경뉴스</a></li>
                         </ul>
-                        <em></em>
-                        <ul>
+                        <ul class="tow-nd">
                             <li><a href="#">웹진</a></li>
                             <li><a href="#">ON AEKYUNG</a></li>
                         </ul>
-                        <em></em>
-                        <ul>
+                        <ul class="tow-nd">
                             <li><a href="#">소셜미디어</a></li>
                             <li><a href="#">Facebook</a></li>
                             <li><a href="#">Instagram</a></li>
@@ -132,35 +126,34 @@
                     </li>
                 </ul>
             </li>
-            <em></em>
             <li>
                 <h3><a href="#">IR</a></h3>
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="#">지배구조</a></li>
-                            <li><a href="#">기업지배구조</a></li>
-                            <li><a href="#">기업지배구조헌장</a></li>
+                            <li><a href="http://jdcomp.pw/ir_governance.html">지배구조</a></li>
+                            <li><a href="http://jdcomp.pw/ir_governance.html">기업지배구조</a></li>
+                            <li class="tow-nd"><a href="#">기업지배구조헌장</a></li>
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="#">재무정보</a></li>
-                            <li><a href="#">재무상태표</a></li>
-                            <li><a href="#">손익계산서</a></li>
-                            <li><a href="#">현금흐름표</a></li>
+                            <li><a href="http://jdcomp.pw/financial_income2021.html">재무정보</a></li>
+                            <li><a href="http://jdcomp.pw/financial_income2021.html">재무상태표</a></li>
+                            <li><a href="http://jdcomp.pw/financial_statement2021.html">손익계산서</a></li>
+                            <li><a href="http://jdcomp.pw/financial_cash2021.html">현금흐름표</a></li>
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="#">공시정보</a></li>
-                            <li><a href="#">공시자료</a></li>
-                            <li><a href="#">공고</a></li>
+                            <li><a href="http://jdcomp.pw/investment_info.html">공시정보</a></li>
+                            <li><a href="http://jdcomp.pw/investment_info.html">공시자료</a></li>
+                            <li><a href="http://jdcomp.pw/investment_info_list.html">공고</a></li>
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="#">IR 정보</a></li>
-                            <li><a href="#">Contact IR</a></li>
-                            <li><a href="#">사업보고서</a></li>
-                            <li><a href="#">감사보고서</a></li>
+                            <li><a href="http://jdcomp.pw/ir_contact.html">IR 정보</a></li>
+                            <li><a href="http://jdcomp.pw/ir_contact.html">Contact IR</a></li>
+                            <li><a href="http://jdcomp.pw/ir_business.html">사업보고서</a></li>
+                            <li class="tow-nd"><a href="#">감사보고서</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -197,8 +190,8 @@
         <div class="news-top">
             <h2>#NEWSROOM</h2>
             <div class="btn-box">
-                <h3><a href="#">애경뉴스</a></h3>
-                <h3><a href="#">웹진</a></h3>
+                <h3><a href="http://jdcomp.pw/ak_news.html">애경뉴스</a></h3>
+                <h3 class="tow-nd"><a href="#">웹진</a></h3>
             </div>
         </div>
         <div class="ak-news-list">
@@ -237,16 +230,16 @@
         <div class="esg-top">
             <h2>#ESG</h2>
             <div class="btn-box">
-                <h3><a href="#">ESG 경영</a></h3>
-                <h3><a href="#">ESG 소식</a></h3>
-                <h3><a href="#">윤리경영</a></h3>
-                <h3><a href="#">애경복지재단</a></h3>
+                <h3><a href="http://jdcomp.pw/esg_management_goal.html">ESG 경영</a></h3>
+                <h3><a href="http://jdcomp.pw/esg_news.html">ESG 소식</a></h3>
+                <h3 class="tow-nd"><a href="#">윤리경영</a></h3>
+                <h3 class="tow-nd"><a href="#">애경복지재단</a></h3>
             </div>
         </div>
         <div class="esg-list">
             <ul>
                 <li>
-                    <a href="#">
+                    <a href="http://jdcomp.pw/esg_management_goal.html">
                         <div>
                             <h4>ESG 경영 목표</h4>
                             <p class="con">지속가능한 사회를 구축하는데<br>
@@ -258,7 +251,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="http://jdcomp.pw/esg_news.html">
                         <div>
                             <h4>ESG 소식</h4>
                             <p class="con">각 계열사만의 특성을 발휘하여,<br>
@@ -292,12 +285,13 @@
         crossorigin="anonymous"></script>
 <script src="./js/common.js"></script>
 <script>
+
     //init
     $(function () {
-        console.log(AKCOMMON)
         setTimeout(function () {
             AKCOMMON.topEffect = true;
-        }, 100);
+        }, 10);
+
     });
     //scrollDown
     function scrollDown() {
