--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
     </thead>
     <tbody>
     <tr>
+        <td>0</td>
+        <td>메인</td>
+        <td><a href="./main.html">main.html</a></td>
+        <td><p style="color:#ff0000;">6/6업데이트</p></td>
+    </tr>
+    <tr>
         <td>1</td>
         <td>그룹 소개 > 창업이념</td>
         <td><a href="./value_founded.html">value_founded.html</a></td>
@@ -99,7 +105,9 @@
         <td>6</td>
         <td>IR > 지배구조</td>
         <td><a href="./ir_governance.html">ir_governance.html</a></td>
-        <td><p style="color:#ff00ff;">6/2업데이트</p></td>
+        <td><p style="color:#ff00ff;">6/2업데이트</p>
+            <p style="color:#ff0000;">6/6업데이트 - 약관추가)</p>
+        </td>
     </tr>
     <tr>
         <td>6</td>
