--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
-<header class="top">
+<header class="main-top">
     <div class="head">
         <h1><a href="http://jdcomp.pw"><img src="./images/logo_w.png" alt="AK 홀딩스 로고"><img src="./images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
         <div class="quick-menu">
