--- a/main.html
+++ b/main.html
@@ -164,11 +164,11 @@
 <main class="main">
     <section class="top-visual">
         <div class="video-box">
-            <video muted autoplay loop poster="./videos/Mo_AK_Main.mp4" class="mo">
+            <video playsinline muted autoplay loop poster="./videos/Mo_AK_Main.mp4" class="mo">
                 <source src="./videos/Mo_AK_Main.mp4" type="video/mp4">
                 <strong>Your browser does not support the video tag.</strong>
             </video>
-            <video muted autoplay loop poster="./videos/Web_AK_Main_000.jpg" class="pc">
+            <video playsinline muted autoplay loop poster="./videos/Web_AK_Main_000.jpg" class="pc">
                 <source src="./videos/Web_AK_Main.mp4" type="video/mp4">
                 <strong>Your browser does not support the video tag.</strong>
             </video>
