--- a/introduce_history.html
+++ b/introduce_history.html
@@ -198,7 +198,7 @@
             </ul>
         </div>
         <div class="history-wrap">
-            <div class="year-wrap">
+            <div class="year-wrap active"><!-- 닫힐 때 active 추가 -->
                 <em class="year">2022</em>
                 <ul>
                     <li>
