--- a/financial_income2017.html
+++ b/financial_income2017.html
@@ -260,7 +260,7 @@
                             </tr>
                             <tr>
                                 <th>기타자본항목</th>
-                                <td>(10,073)</td>
+                                <td class="txtc-skyblue">(10,073)</td>
                             </tr>
                             <tr>
                                 <th>기타포괄손익누계액</th>
@@ -353,7 +353,7 @@
                             </tr>
                             <tr>
                                 <th>기타자본항목</th>
-                                <td>(10,074)</td>
+                                <td class="txtc-skyblue">(10,074)</td>
                             </tr>
                             <tr>
                                 <th>이익잉여금</th>
