--- a/financial_income2018.html
+++ b/financial_income2018.html
@@ -260,7 +260,7 @@
                             </tr>
                             <tr>
                                 <th>기타자본항목</th>
-                                <td>(5,682)</td>
+                                <td class="txtc-skyblue">(5,682)</td>
                             </tr>
                             <tr>
                                 <th>기타포괄손익누계액</th>
@@ -353,7 +353,7 @@
                             </tr>
                             <tr>
                                 <th>기타자본항목</th>
-                                <td>(5,682)</td>
+                                <td class="txtc-skyblue">(5,682)</td>
                             </tr>
                             <tr>
                                 <th>이익잉여금</th>
