--- a/financial_income2020.html
+++ b/financial_income2020.html
@@ -351,6 +351,14 @@
                                 <th>자본잉여금</th>
                                 <td>235,647</td>
                             </tr>
+                            <tr>
+                                <th>기타자본항목</th>
+                                <td class="txtc-skyblue">(5,498)</td>
+                            </tr>
+                            <tr>
+                                <th>이익잉여금</th>
+                                <td>220,323</td>
+                            </tr>
                             </tbody>
                             <tfoot>
                             <tr>
