--- a/introduce_history.html
+++ b/introduce_history.html
@@ -1098,5 +1098,12 @@
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
         crossorigin="anonymous"></script>
 <script src="./js/common.js"></script>
+<!--<script src="./js/jquery.sticky.js"></script>-->
+<script>
+    //init
+    $(function () {
+        AKCOMMON.historyEffect = true;
+    });
+</script>
 </body>
 </html>
