--- a/value_management.html
+++ b/value_management.html
@@ -168,7 +168,7 @@
         <h2 class="tit">애경 가치</h2>
         <p class="desc">풍요롭고 행복한 삶을 창조하는 기업입니다</p>
     </div>
-    <div class="visual has-tab" style="background-image:url(../ak/images/img_value.png)"><!-- 6/2업데이트 - .has-tab 추가 -->
+    <div class="visual value has-tab"><!-- 6/2업데이트 - .has-tab 추가 -->
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
