--- a/ir_governance.html
+++ b/ir_governance.html
@@ -169,7 +169,7 @@
         <p class="desc">투명한 지배구조 확립을 통해<br class="mo">
             사회적 요구에 부응하겠습니다</p>
     </div>
-    <div class="visual has-tab" style="background-image:url(../ak/images/img_ir_governance.png)"><!-- 6/2업데이트 - .has-tab 추가 -->
+    <div class="visual ir-governance has-tab"><!-- 6/2업데이트 - .has-tab 추가 -->
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
