--- a/ir_business.html
+++ b/ir_business.html
@@ -168,7 +168,7 @@
         <h2 class="tit"><span class="tk-arboria">IR</span> 정보</h2>
         <p class="desc">AK홀딩스는 주주와의 소통을 통해<br class="mo">사회적 책임경영을 실전하고자 노력하고 있습니다</p>
     </div>
-    <div class="visual has-tab" style="background-image:url(../ak/images/img_ir.png)"><!-- 6/2업데이트 - .has-tab 추가 -->
+    <div class="visual ir has-tab"><!-- 6/2업데이트 - .has-tab 추가 -->
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
