--- a/introduce_ceo.html
+++ b/introduce_ceo.html
@@ -168,7 +168,7 @@
         <h2 class="tit">회사 소개</h2>
         <p class="desc">AK홀딩스의 기업 정보를 확인하실 수 있습니다</p>
     </div>
-    <div class="visual has-tab intro-company" style="background-image:url(../ak/images/img_introduce_company.png)">
+    <div class="visual has-tab intro-company">
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
