--- a/financial_cash2021.html
+++ b/financial_cash2021.html
@@ -165,7 +165,7 @@
         <h2 class="tit">현금흐름표</h2>
         <p class="desc">사업 실적을 포함한<br class="mo">각종 투자 관련 정보를 제공합니다</p>
     </div>
-    <div class="visual has-tab" style="background-image:url(../ak/images/img_financial.png)">
+    <div class="visual financial has-tab">
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
