--- a/financial_statement2020.html
+++ b/financial_statement2020.html
@@ -168,7 +168,7 @@
         <h2 class="tit">손익계산서</h2>
         <p class="desc">사업 실적을 포함한<br class="mo">각종 투자 관련 정보를 제공합니다</p>
     </div>
-    <div class="visual has-tab" style="background-image:url(../ak/images/img_financial.png)"><!-- 6/2업데이트 - .has-tab 추가 -->
+    <div class="visual financial has-tab"><!-- 6/2업데이트 - .has-tab 추가 -->
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
