--- a/financial_statement2021.html
+++ b/financial_statement2021.html
@@ -168,7 +168,17 @@
         <h2 class="tit">손익계산서</h2>
         <p class="desc">사업 실적을 포함한<br class="mo">각종 투자 관련 정보를 제공합니다</p>
     </div>
-    <div class="visual" style="background-image:url(../ak/images/img_financial.png)"></div>
+
+    <div class="visual financial has-tab"><!-- 6/2업데이트 - .has-tab 추가 -->
+        <div class="top-tab">
+            <ul>
+                <!-- active: 활성화시 li에 .active 추가 -->
+                <li><a href="./financial_income2021.html">재무상태표</a></li>
+                <li class="active"><a href="javascript:;">손익계산서</a></li>
+                <li><a href="./financial_cash2021.html">현금흐름표</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
 <!--//visual 영역-->
 <!--본문영역-->
