--- a/value_talent.html
+++ b/value_talent.html
@@ -168,7 +168,7 @@
         <h2 class="tit">애경 가치</h2>
         <p class="desc">풍요롭고 행복한 삶을 창조하는 기업입니다</p>
     </div>
-    <div class="visual value has-tab"> <!-- 6/2업데이트 - .has-tab 추가 -->
+    <div class="visual value has-tab"><!-- 6/9업데이트 - 비주얼이미지 인라인 제거 및 class 추가--> <!-- 6/2업데이트 - .has-tab 추가 -->
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
