--- a/ak_news.html
+++ b/ak_news.html
@@ -165,7 +165,7 @@
         <h2 class="tit">애경뉴스</h2>
         <p class="desc">애경그룹의 최신 소식을 전해드립니다</p>
     </div>
-    <div class="visual ak-news">
+    <div class="visual ak-news"> <!-- 6/9업데이트 - 비주얼이미지 인라인 제거 및 class 추가-->
     </div>
 </div>
 <!--//visual 영역-->
