--- a/esg_management_goal.html
+++ b/esg_management_goal.html
@@ -168,7 +168,7 @@
         <h2 class="tit"><span class="tk-arboria">ESG</span> 경영</h2>
         <p class="desc">지속가능한 사회를 구축하는데 앞장서겠습니다</p>
     </div>
-    <div class="visual management has-tab"><!-- 6/2업데이트 - .has-tab 추가 -->
+    <div class="visual management has-tab"><!-- 6/9업데이트 - 비주얼이미지 인라인 제거 및 class 추가--><!-- 6/2업데이트 - .has-tab 추가 -->
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
