--- a/esg_news_detail.html
+++ b/esg_news_detail.html
@@ -168,7 +168,7 @@
         <h2 class="tit">애경뉴스</h2>
         <p class="desc">애경의 주요한 소식을 한눈에 확인하세요</p>
     </div>
-    <div class="visual" style="background-image:url(/images/img_esgNews.png)"></div>
+    <div class="visual esg-news"></div><!-- 6/9업데이트 - 비주얼이미지 인라인 제거 및 class 추가-->
 </div>
 <!--//visual 영역-->
 <!--본문영역-->
