--- a/introduce_history.html
+++ b/introduce_history.html
@@ -165,7 +165,7 @@
         <h2 class="tit">연혁</h2>
         <p class="desc">변천하여 온 애경의 역사를 소개합니다</p>
     </div>
-    <div class="visual intro-history">
+    <div class="visual intro-history"><!-- 6/9업데이트 - 비주얼이미지 인라인 제거 및 class 추가-->
         <div class="desc">
             애경그룹의 모태가 된 애경유지공업의 영등포공장 1960년대 전경
         </div>
