--- a/introduce_history.html
+++ b/introduce_history.html
@@ -177,14 +177,14 @@
     <div class="history-cont">
         <div class="history-tab"><!-- 열렸을 때 active 넣으면 select-tab display:block 됨-->
             <ul class="selected-tab">
-                <li class="active"><span>2020 ~ 현재</span></li><!-- 선택된 탭에 active추가 -->
-                <li><span>2010 ~ 2019</span></li>
-                <li><span>2000 ~ 2009</span></li>
-                <li><span>1990 ~ 1999</span></li>
-                <li><span>1980 ~ 1989</span></li>
-                <li><span>1970 ~ 1979</span></li>
-                <li><span>1960 ~ 1969</span></li>
-                <li><span>1945 ~ 1959</span></li>
+                <li class="active" data-btn-year=".history-wrap>div:eq(0)"><span>2020 ~ 현재</span></li><!-- 선택된 탭에 active추가 -->
+                <li data-btn-year="div[data-year=2019]"><span>2010 ~ 2019</span></li>
+                <li data-btn-year="div[data-year=2009]"><span>2000 ~ 2009</span></li>
+                <li data-btn-year="div[data-year=1999]"><span>1990 ~ 1999</span></li>
+                <li data-btn-year="div[data-year=1987]"><span>1980 ~ 1989</span></li>
+                <li data-btn-year="div[data-year=1976]"><span>1970 ~ 1979</span></li>
+                <li data-btn-year="div[data-year=1967]"><span>1960 ~ 1969</span></li>
+                <li data-btn-year="div[data-year=1956]"><span>1945 ~ 1959</span></li>
             </ul>
             <ul class="select-tab">
                 <li class="active" data-btn-year=".history-wrap>div:eq(0)"><a href="javascript:;">2020 ~ 현재</a></li><!-- 활성화 되어있는 탭일때 active -->
