--- a/introduce_history.html
+++ b/introduce_history.html
@@ -26,7 +26,7 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M5JGW9K"
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-<header>
+<header class="top">
     <div class="head">
         <h1><a href="#"><img src="./images/logo_w.png" alt="AK 홀딩스 로고"><img src="./images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
         <div class="quick-menu">
