--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
         <td><p style="color:#ff00ff;">6/2업데이트</p><p>6/9업데이트 비주얼이미지 인라인 제거 및 class 추가</p></td>
     </tr>
     <tr>
+        <td>1</td>
+        <td>그룹 소개 > 연혁</td>
+        <td><a href="./introduce_history.html">introduce_history.html</a></td>
+        <td><p style="color:#ff0000;">6/6업데이트</p></td>
+    </tr>
+    <tr>
         <td>2</td>
         <td>뉴스룸 > 애경뉴스 리스트</td>
         <td><a href="./ak_news.html">ak_news.html</a></td>
