--- a/ir_governance.html
+++ b/ir_governance.html
@@ -501,7 +501,7 @@
                         이외에는 이 규정이 정하는 바에 의한다.
                     </li>
                     <li>
-                        <p>제3조 (권한)</p>
+                        <p>제3조 (직무와 권한)</p>
                         <ul>
                             <li><em>①</em>이사회는 법령 또는 정관에 정하여진 사항,
                                 주주총회로부터 위임 받은 사항, 회사경영의 기본
