--- a/ir_governance.html
+++ b/ir_governance.html
@@ -534,7 +534,7 @@
                 <h6>제3장  회   의</h6>
                 <ul>
                     <li>
-                        <p>제7조 (종류)</p>
+                        <p>제7조 (회의)</p>
                         <ul>
                             <li><em>①</em>이사회는 정기이사회와 임시이사회로 한다.</li>
                             <li><em>②</em>정기이사회는 매분기 1회 이상으로 한다. </li>
@@ -959,13 +959,12 @@
                 <h6>제4장 외부감사인</h6>
                 <ul>
                     <li>
-                        <p>제14조 (이사에 대한 직무집행감독권)</p>
+                        <p>제14조 (외부감사인 선정 등)</p>
                         <ul>
                             <li><em>①</em>위원회는 외부감사에 관한법률 제10조 1항에
                                 의거하여 외부감사인을 선정하여야 하고,
                                 외부감사인 선정에 필요한 기준과 절차를 마련하고
-                                별도의 문서로 작성, 관리한다.
-                                ②</li>
+                                별도의 문서로 작성, 관리한다.</li>
                             <li><em>②</em>위원회는 외부감사인의 감사보수와 감사시간,
                                 감사에 필요한 인력에 관한 사항을 문서로 정한다.</li>
                             <li><em>②</em>위원회는 매 사업연도마다 외부감사인이
@@ -1067,8 +1066,6 @@
                 <ul>
                     <li>
                         <p>제4조 (위원회 위원)</p>
-                        이사회는 이사 전원(사외이사 및 기타비상무이사
-                        포함)으로 구성한다.
                         <ul>
                             <li><em>①</em>위원회 위원은 총 3인 이상의 이사로 구성하되,
                                 사외이사의 수가 3인 이상이고 위원회 총수의
@@ -1194,7 +1191,7 @@
                         </ul>
                     </li>
                     <li>
-                        <p>제12조 (이사회 내 위원회)</p>
+                        <p>제13조 (자료 제출 요구권 등)</p>
                         <ul>
                             <li><em>①</em>위원회는 업무수행을 위하여 필요한 경우 관련
                                 임직원 및 외부인사에게 위원회 출석, 관련자료의
@@ -1218,7 +1215,7 @@
             <div>
                 <ul class="etc">
                     <li>
-                        <p>부     칙(2021. 8. 18)</p>
+                        <p>부     칙(2021. 8. 17)</p>
                         본 규정은 2021년 8월 17일부터 시행한다.
                     </li>
                 </ul>
