--- a/financial_statement2017.html
+++ b/financial_statement2017.html
@@ -172,9 +172,9 @@
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
-                <li><a href="./financial_income2021.html">재무상태표</a></li>
+                <li><a href="http://jdcomp.pw/financial_income2021.html">재무상태표</a></li>
                 <li class="active"><a href="javascript:;">손익계산서</a></li>
-                <li><a href="./financial_cash2021.html">현금흐름표</a></li>
+                <li><a href="http://jdcomp.pw/financial_cash2021.html">현금흐름표</a></li>
             </ul>
         </div>
     </div>
@@ -186,10 +186,10 @@
         <strong class="cont_tit">AK홀딩스㈜</strong>
         <div class="tab-wrap">
             <ul class="tab">
-                <li><a href="./financial_statement2021.html">2021년</a></li>
-                <li><a href="./financial_statement2020.html">2020년</a></li>
-                <li><a href="./financial_statement2019.html">2019년</a></li>
-                <li><a href="./financial_statement2018.html">2018년</a></li>
+                <li><a href="http://jdcomp.pw/financial_statement2021.html">2021년</a></li>
+                <li><a href="http://jdcomp.pw/financial_statement2020.html">2020년</a></li>
+                <li><a href="http://jdcomp.pw/financial_statement2019.html">2019년</a></li>
+                <li><a href="http://jdcomp.pw/financial_statement2018.html">2018년</a></li>
                 <li><a href="javascript:;" class="active">2017년</a></li>
             </ul>
             <div class="tab-cont-wrap">
