--- a/ir_business.html
+++ b/ir_business.html
@@ -166,7 +166,7 @@
 <div class="topArea sub">
     <div class="titArea">
         <h2 class="tit"><span class="tk-arboria">IR</span> 정보</h2>
-        <p class="desc">AK홀딩스는 주주와의 소통을 통해<br class="mo">사회적 책임경영을 실전하고자 노력하고 있습니다</p>
+        <p class="desc">AK홀딩스는 주주와의 소통을 통해<br class="mo">사회적 책임경영을 실천하고자 노력하고 있습니다</p>
     </div>
     <div class="visual ir has-tab"><!-- 6/9업데이트 - 비주얼이미지 인라인 제거 및 class 추가--><!-- 6/2업데이트 - .has-tab 추가 -->
         <div class="top-tab">
@@ -174,7 +174,7 @@
                 <!-- active: 활성화시 li에 .active 추가 -->
                 <li><a href="javascript:;">Contact IR</a></li>
                 <li class="active"><a href="javascript:;">사업보고서</a></li>
-                <li><a href="./ir_inspect.html">감사보고서</a></li>
+<!--                <li><a href="./ir_inspect.html">감사보고서</a></li>-->
             </ul>
         </div>
     </div>
@@ -187,57 +187,36 @@
             <ul>
                 <li>
                     <a href="javascript:;" class="inner">
-                        <span class="number">No. 15</span>
-                        <strong class="tit">제52기 대차대조표 공고</strong>
+                        <span class="number">No. 5</span>
+                        <strong class="tit">사업보고서 (2022)</strong>
                         <span class="btn-download">다운로드</span>
                     </a>
                 </li>
                 <li>
                     <a href="javascript:;" class="inner">
-                        <span class="number">No. 15</span>
-                        <strong class="tit">제52기 대차대조표 공고</strong>
+                        <span class="number">No. 4</span>
+                        <strong class="tit">사업보고서 (2021)</strong>
                         <span class="btn-download">다운로드</span>
                     </a>
                 </li>
                 <li>
                     <a href="javascript:;" class="inner">
-                        <span class="number">No. 15</span>
-                        <strong class="tit">제52기 대차대조표 공고</strong>
+                        <span class="number">No. 3</span>
+                        <strong class="tit">사업보고서 (2020)</strong>
                         <span class="btn-download">다운로드</span>
                     </a>
                 </li>
                 <li>
                     <a href="javascript:;" class="inner">
-                        <span class="number">No. 15</span>
-                        <strong class="tit">제52기 대차대조표 공고</strong>
+                        <span class="number">No. 2</span>
+                        <strong class="tit">사업보고서 (2019)</strong>
                         <span class="btn-download">다운로드</span>
                     </a>
                 </li>
                 <li>
                     <a href="javascript:;" class="inner">
-                        <span class="number">No. 15</span>
-                        <strong class="tit">제52기 대차대조표 공고</strong>
-                        <span class="btn-download">다운로드</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="javascript:;" class="inner">
-                        <span class="number">No. 15</span>
-                        <strong class="tit">제52기 대차대조표 공고</strong>
-                        <span class="btn-download">다운로드</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="javascript:;" class="inner">
-                        <span class="number">No. 15</span>
-                        <strong class="tit">제52기 대차대조표 공고</strong>
-                        <span class="btn-download">다운로드</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="javascript:;" class="inner">
-                        <span class="number">No. 15</span>
-                        <strong class="tit">제52기 대차대조표 공고</strong>
+                        <span class="number">No. 1</span>
+                        <strong class="tit">사업보고서 (2018)</strong>
                         <span class="btn-download">다운로드</span>
                     </a>
                 </li>
