--- a/financial_statement2021.html
+++ b/financial_statement2021.html
@@ -209,7 +209,7 @@
                             <thead>
                             <tr>
                                 <th>매출</th>
-                                <td>3,167,700</td>
+                                <td>3,167,700</td><!-- 6/6업데이트 오타수정 -->
                             </tr>
                             </thead>
                             <tbody>
