--- a/introduce_ceo.html
+++ b/introduce_ceo.html
@@ -192,7 +192,7 @@
             </span>
             <p class="name">애경홀딩스 대표이사 <em>이</em><em>석</em><em>주</em></p>
         </div>
-        <p class="desc">
+        <p class="desc"><!-- 6/6업데이트 오타수정 -->
             애경그룹은 지난 68년간 고객의 신뢰 속에서<br>
             다양한 이해관계자들과 협력하며 지속적인<br class="mo">
             성장을 이루어 왔습니다.<br><br>
