--- a/ir_business.html
+++ b/ir_business.html
@@ -166,7 +166,7 @@
 <div class="topArea sub">
     <div class="titArea">
         <h2 class="tit"><span class="tk-arboria">IR</span> 정보</h2>
-        <p class="desc">AK홀딩스는 주주와의 소통을 통해<br class="mo">사회적 책임경영을 실천하고자 노력하고 있습니다</p>
+        <p class="desc">AK홀딩스는 주주와의 소통을 통해<br class="mo">사회적 책임경영을 실천하고자 노력하고 있습니다</p><!-- 6/6업데이트 오타수정 -->
     </div>
     <div class="visual ir has-tab"><!-- 6/7업데이트 - 비주얼이미지 인라인 제거 및 class 추가--><!-- 6/2업데이트 - .has-tab 추가 -->
         <div class="top-tab">
@@ -174,7 +174,7 @@
                 <!-- active: 활성화시 li에 .active 추가 -->
                 <li><a href="javascript:;">Contact IR</a></li>
                 <li class="active"><a href="javascript:;">사업보고서</a></li>
-<!--                <li><a href="./ir_inspect.html">감사보고서</a></li>-->
+<!--                <li><a href="./ir_inspect.html">감사보고서</a></li>--><!-- 6/6업데이트 2차메뉴 숨김 -->
             </ul>
         </div>
     </div>
