--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <td>그룹 소개 > 창업이념</td>
         <td><a href="./value_founded.html">value_founded.html</a></td>
         <td>5/29업데이트
-            <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p></td>
+            <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p>
+        <p style="color:#FF0000">6/6업데이트 오타수정</p></td>
     </tr>
     <tr>
         <td>1</td>
@@ -60,7 +61,7 @@
         <td>1</td>
         <td>그룹 소개 > 회사소개 > CEO Message</td>
         <td><a href="./introduce_ceo.html">introduce_ceo.html</a></td>
-        <td><p style="color:#ff00ff;">6/2업데이트</p><p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p></td>
+        <td><p style="color:#ff00ff;">6/2업데이트</p><p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p><p style="color:#FF0000">6/6업데이트 오타수정</p></td>
     </tr>
     <tr>
         <td>1</td>
@@ -118,6 +119,7 @@
         <td><a href="./ir_governance.html">ir_governance.html</a></td>
         <td><p style="color:#ff00ff;">6/2업데이트</p>
             <p style="color:#ff0000;">6/6업데이트 - 약관추가)</p>
+            <p style="color:#FF0000">6/6업데이트 오타수정</p>
         </td>
     </tr>
     <tr>
@@ -125,42 +127,43 @@
         <td>IR > 재무상태표 2021</td>
         <td><a href="./financial_income2021.html">financial_income2021.html</a></td>
         <td>5/29업데이트
-            <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p></td>
+            <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p>
+            <p style="color:#FF0000">6/6업데이트 오타수정</p></td>
     </tr>
     <tr>
         <td>6</td>
         <td>IR > 재무상태표 2020</td>
         <td><a href="./financial_income2020.html">financial_income2020.html</a></td>
         <td>5/29업데이트
-            <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p></td>
+            <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p><p style="color:#FF0000">6/6업데이트 오타수정</p></td>
     </tr>
     <tr>
         <td>6</td>
         <td>IR > 재무상태표 2019</td>
         <td><a href="./financial_income2019.html">financial_income2019.html</a></td>
         <td>5/29업데이트
-            <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p></td>
+            <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p><p style="color:#FF0000">6/6업데이트 오타수정</p></td>
     </tr>
     <tr>
         <td>6</td>
         <td>IR > 재무상태표 2018</td>
         <td><a href="./financial_income2018.html">financial_income2018.html</a></td>
         <td>5/29업데이트
-            <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p></td>
+            <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p><p style="color:#FF0000">6/6업데이트 오타수정</p></td>
     </tr>
     <tr>
         <td>6</td>
         <td>IR > 재무상태표 2017</td>
         <td><a href="./financial_income2017.html">financial_income2017.html</a></td>
         <td>5/29업데이트
-            <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p></td>
+            <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p><p style="color:#FF0000">6/6업데이트 오타수정</p></td>
     </tr>
     <tr>
         <td>7</td>
         <td>IR > 손익계산서 2021</td>
         <td><a href="./financial_statement2021.html">financial_statement2021.html</a></td>
         <td>5/29업데이트
-            <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p></td>
+            <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p><p style="color:#FF0000">6/6업데이트 오타수정</p></td>
     </tr>
     <tr>
         <td>7</td>
@@ -246,19 +249,19 @@
         <td>IR > IR 정보 > Contact IR</td>
         <td><a href="./ir_contact.html">ir_contact.html</a></td>
         <td><p style="color:#ff00ff;">6/2업데이트</p>
-            <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p></td>
+            <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p><p style="color:#FF0000">6/6업데이트 오타 및 메뉴 수정</p></td>
     </tr>
     <tr>
         <td>13</td>
         <td>IR > IR 정보 > 사업보고서</td>
         <td><a href="./ir_business.html">ir_business.html</a></td>
         <td>5/29업데이트
-            <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p></td>
+            <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p><p style="color:#FF0000">6/6업데이트 오타 및 메뉴 수정</p></td>
     </tr>
     <tr>
         <td>14</td>
         <td>IR > IR 정보 > 감사보고서</td>
-        <td><a href="./ir_inspect.html">ir_inspect.html</a></td>
+        <td><a href="./ir_inspect.html">ir_inspect.html</a><p style="color:#FF0000">6/6업데이트 오타 및 메뉴 수정</p></td>
         <td>5/29업데이트
             <p>6/7업데이트 비주얼이미지 인라인 제거 및 class 추가</p></td>
     </tr>
