--- a/ir_governance.html
+++ b/ir_governance.html
@@ -202,7 +202,7 @@
                         <th scope="col">합계</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody><!-- 6/6업데이트 테이블수정 -->
                     <tr>
                         <td>Ⅰ. 발행할 주식의 총수</td>
                         <td class="al-r">30,000,000</td>
@@ -283,7 +283,7 @@
                 <tbody>
                 <tr>
                     <td>제1호 의안</td>
-                    <td>제52기 재무제표 및 연결재무제표 승인의 건</td>
+                    <td>제52기 재무제표 및 연결재무제표 승인의 건</td><!-- 6/6업데이트 오타수정 -->
                     <td class="al-r">-</td>
                     <td class="al-r">-</td>
                     <td class="al-r">-</td>
@@ -297,7 +297,7 @@
                     <td class="al-r">-</td>
                     <td class="al-r">-</td>
                     <td class="al-r">-</td>
-                    <td class="al-c">주1)</td>
+                    <td class="al-c">주1)</td><!-- 6/6업데이트 오타수정 -->
                 </tr>
                 <tr>
                     <td>제3호 의안</td>
@@ -534,7 +534,7 @@
                 <h6>제3장  회   의</h6>
                 <ul>
                     <li>
-                        <p>제7조 (회의)</p>
+                        <p>제7조 (종류)</p>
                         <ul>
                             <li><em>①</em>이사회는 정기이사회와 임시이사회로 한다.</li>
                             <li><em>②</em>정기이사회는 매분기 1회 이상으로 한다. </li>
@@ -788,7 +788,7 @@
                         정하여진 것 이외에는 이 규정이 정하는 바에 의한다.
                     </li>
                     <li>
-                        <p>제3조 (권한)</p>
+                        <p>제3조 (권한)</p><!-- 6/6업데이트 오타수정 -->
                         <ul>
                             <li><em>①</em>위원회는 회사의 회계와 업무를 감사한다.</li>
                             <li><em>②</em>위원회는 회의의 목적사항과 소집의 이유를 기재한
@@ -850,7 +850,7 @@
                 <h6>제3장  회   의</h6>
                 <ul>
                     <li>
-                        <p>제7조 (종류)</p>
+                        <p>제7조 (회의)</p><!-- 6/6업데이트 오타수정 -->
                         <ul>
                             <li><em>①</em>위원회는 정기위원회와 임시위원회로 한다.</li>
                             <li><em>②</em>정기위원회는 회사의 정기보고서(사업보고서 및
@@ -959,12 +959,12 @@
                 <h6>제4장 외부감사인</h6>
                 <ul>
                     <li>
-                        <p>제14조 (외부감사인 선정 등)</p>
+                        <p>제14조 (외부감사인 선정 등)</p><!-- 6/6업데이트 오타수정 -->
                         <ul>
                             <li><em>①</em>위원회는 외부감사에 관한법률 제10조 1항에
                                 의거하여 외부감사인을 선정하여야 하고,
                                 외부감사인 선정에 필요한 기준과 절차를 마련하고
-                                별도의 문서로 작성, 관리한다.</li>
+                                별도의 문서로 작성, 관리한다.</li><!-- 6/6업데이트 오타수정 -->
                             <li><em>②</em>위원회는 외부감사인의 감사보수와 감사시간,
                                 감사에 필요한 인력에 관한 사항을 문서로 정한다.</li>
                             <li><em>②</em>위원회는 매 사업연도마다 외부감사인이
@@ -1065,7 +1065,7 @@
                 <h6>제2장  구   성</h6>
                 <ul>
                     <li>
-                        <p>제4조 (위원회 위원)</p>
+                        <p>제4조 (위원회 위원)</p><!-- 6/6업데이트 오타수정 -->
                         <ul>
                             <li><em>①</em>위원회 위원은 총 3인 이상의 이사로 구성하되,
                                 사외이사의 수가 3인 이상이고 위원회 총수의
@@ -1191,7 +1191,7 @@
                         </ul>
                     </li>
                     <li>
-                        <p>제13조 (자료 제출 요구권 등)</p>
+                        <p>제13조 (자료 제출 요구권 등)</p><!-- 6/6업데이트 오타수정 -->
                         <ul>
                             <li><em>①</em>위원회는 업무수행을 위하여 필요한 경우 관련
                                 임직원 및 외부인사에게 위원회 출석, 관련자료의
@@ -1215,7 +1215,7 @@
             <div>
                 <ul class="etc">
                     <li>
-                        <p>부     칙(2021. 8. 17)</p>
+                        <p>부     칙(2021. 8. 17)</p><!-- 6/6업데이트 오타수정 -->
                         본 규정은 2021년 8월 17일부터 시행한다.
                     </li>
                 </ul>
