--- a/value_founded.html
+++ b/value_founded.html
@@ -206,7 +206,7 @@
                 <p class="desc">애경 그룹은 정직하고 투명한<br> 경영 활동을 통해 고객의 생활을<br> 더욱 깨끗하고 아름답게<br>만들기 위해 노력합니다.</p>
             </li>
             <li class="trust">
-                <em class="tit">신뢰</em>
+                <em class="tit">신뢰</em><!-- 6/6업데이트 오타수정 -->
                 <p class="desc">애경 그룹은 구성원 및 파트너들과<br> 끊임 없는 소통으로 신뢰를 형성하여<br> 누구나 믿을 수 있는<br> 제품과 서비스를 제공합니다.</p>
             </li>
             <li class="innovation">
