--- a/financial_income2018.html
+++ b/financial_income2018.html
@@ -17,8 +17,8 @@
     <meta name="og:site_name" content="AK 홀딩스 재무정보" />
     <meta name="og:title" content="AK 홀딩스 재무정보" />
     <meta name="og:description" content="기계가 웹페이지를 효과적으로 이해할 수 있도록 사용하는 메타 태그에 대해서 알아보겠습니다."/>
-    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <title>2018년 재무정보 | AK 홀딩스</title>
 </head>
 <body>
@@ -28,7 +28,7 @@
 <!-- End Google Tag Manager (noscript) -->
 <header>
     <div class="head">
-        <h1><a href="#"><img src="./images/logo_w.png" alt="AK 홀딩스 로고"><img src="./images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
+        <h1><a href="#"><img src="/images/logo_w.png" alt="AK 홀딩스 로고"><img src="/images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
         <div class="quick-menu">
             <ul>
                 <li><a href="#">그룹 소개</a></li>
@@ -173,8 +173,8 @@
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
                 <li class="active"><a href="javascript:;">재무상태표</a></li>
-                <li><a href="http://jdcomp.pw/financial_statement2021.html">손익계산서</a></li>
-                <li><a href="http://jdcomp.pw/financial_cash2021.html">현금흐름표</a></li>
+                <li><a href="/financial_statement2021.html">손익계산서</a></li>
+                <li><a href="/financial_cash2021.html">현금흐름표</a></li>
             </ul>
         </div>
     </div>
@@ -186,11 +186,11 @@
         <strong class="cont_tit">AK홀딩스㈜</strong>
         <div class="tab-wrap">
             <ul class="tab">
-                <li><a href="http://jdcomp.pw/financial_income2021.html">2021년</a></li>
-                <li><a href="http://jdcomp.pw/financial_income2020.html">2020년</a></li>
-                <li><a href="http://jdcomp.pw/financial_income2019.html">2019년</a></li>
+                <li><a href="/financial_income2021.html">2021년</a></li>
+                <li><a href="/financial_income2020.html">2020년</a></li>
+                <li><a href="/financial_income2019.html">2019년</a></li>
                 <li><a href="javascript:;" class="active">2018년</a></li>
-                <li><a href="http://jdcomp.pw/financial_income2017.html">2017년</a></li>
+                <li><a href="/financial_income2017.html">2017년</a></li>
             </ul>
             <div class="tab-cont-wrap">
                 <!--2019년-->
@@ -396,6 +396,6 @@
 <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
         crossorigin="anonymous"></script>
-<script src="./js/common.js"></script>
+<script src="/js/common.js"></script>
 </body>
 </html>
