--- a/investment_info.html
+++ b/investment_info.html
@@ -17,8 +17,8 @@
     <meta name="og:site_name" content="AK 홀딩스 공시자료" />
     <meta name="og:title" content="AK 홀딩스 공시자료" />
     <meta name="og:description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다."/>
-    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <title>공시자료 | AK 홀딩스</title>
 </head>
 <body>
@@ -28,7 +28,7 @@
 <!-- End Google Tag Manager (noscript) -->
 <header>
     <div class="head">
-        <h1><a href="#"><img src="./images/logo_w.png" alt="AK 홀딩스 로고"><img src="./images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
+        <h1><a href="#"><img src="/images/logo_w.png" alt="AK 홀딩스 로고"><img src="/images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
         <div class="quick-menu">
             <ul>
                 <li><a href="#">그룹 소개</a></li>
@@ -179,7 +179,7 @@
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
                 <li class="active"><a href="javascript:;">공시자료</a></li>
-                <li><a href="./investment_info_list.html">공고</a></li>
+                <li><a href="/investment_info_list.html">공고</a></li>
             </ul>
         </div>
     </div>
@@ -212,6 +212,6 @@
 <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
         crossorigin="anonymous"></script>
-<script src="./js/common.js"></script>
+<script src="/js/common.js"></script>
 </body>
 </html>
