--- a/ir_contact.html
+++ b/ir_contact.html
@@ -17,8 +17,8 @@
     <meta name="og:site_name" content="AK 홀딩스 Contact IR" />
     <meta name="og:title" content="AK 홀딩스 Contact IR" />
     <meta name="og:description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다."/>
-    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <title>Contact IR | AK 홀딩스</title>
 </head>
 <body>
@@ -28,7 +28,7 @@
 <!-- End Google Tag Manager (noscript) -->
 <header>
     <div class="head">
-        <h1><a href="#"><img src="./images/logo_w.png" alt="AK 홀딩스 로고"><img src="./images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
+        <h1><a href="#"><img src="/images/logo_w.png" alt="AK 홀딩스 로고"><img src="/images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
         <div class="quick-menu">
             <ul>
                 <li><a href="#">그룹 소개</a></li>
@@ -173,8 +173,8 @@
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
                 <li class="active"><a href="javascript:;">Contact IR</a></li>
-                <li><a href="./ir_business.html">사업보고서</a></li>
-<!--                <li><a href="./ir_inspect.html">감사보고서</a></li>--><!-- 6/6업데이트 2차메뉴 숨김 -->
+                <li><a href="/ir_business.html">사업보고서</a></li>
+<!--                <li><a href="/ir_inspect.html">감사보고서</a></li>--><!-- 6/6업데이트 2차메뉴 숨김 -->
             </ul>
         </div>
     </div>
@@ -224,6 +224,6 @@
 <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
         crossorigin="anonymous"></script>
-<script src="./js/common.js"></script>
+<script src="/js/common.js"></script>
 </body>
 </html>
