--- a/value_management.html
+++ b/value_management.html
@@ -17,8 +17,8 @@
     <meta name="og:site_name" content="AK 홀딩스 경영이념" />
     <meta name="og:title" content="AK 홀딩스 경영이념" />
     <meta name="og:description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다."/>
-    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <title>경영이념 | AK 홀딩스</title>
 </head>
 <body>
@@ -28,7 +28,7 @@
 <!-- End Google Tag Manager (noscript) -->
 <header>
     <div class="head">
-        <h1><a href="#"><img src="./images/logo_w.png" alt="AK 홀딩스 로고"><img src="./images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
+        <h1><a href="#"><img src="/images/logo_w.png" alt="AK 홀딩스 로고"><img src="/images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
         <div class="quick-menu">
             <ul>
                 <li><a href="#">그룹 소개</a></li>
@@ -172,9 +172,9 @@
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
-                <li><a href="#">창업이념</a></li>
+                <li><a href="/value_founded.html">창업이념</a></li>
                 <li class="active"><a href="#">경영이념</a></li>
-                <li><a href="#">인재상</a></li>
+                <li><a href="/value_talent.html">인재상</a></li>
                 <li class="tow-nd"><a href="#">가치체계도</a></li>
                 <li class="tow-nd"><a href="#">미션과 비전</a></li>
             </ul>
@@ -240,6 +240,6 @@
 <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
         crossorigin="anonymous"></script>
-<script src="./js/common.js"></script>
+<script src="/js/common.js"></script>
 </body>
 </html>
