--- a/ak_news_detail.html
+++ b/ak_news_detail.html
@@ -17,8 +17,8 @@
     <meta name="og:site_name" content="AK 홀딩스 애경뉴스" />
     <meta name="og:title" content="AK 홀딩스 애경뉴스" />
     <meta name="og:description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다."/>
-    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <title>애경뉴스 | AK 홀딩스</title>
 </head>
 <body>
@@ -28,7 +28,7 @@
 <!-- End Google Tag Manager (noscript) -->
 <header>
     <div class="head">
-        <h1><a href="#"><img src="./images/logo_w.png" alt="AK 홀딩스 로고"><img src="./images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
+        <h1><a href="#"><img src="/images/logo_w.png" alt="AK 홀딩스 로고"><img src="/images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
         <div class="quick-menu">
             <ul>
                 <li><a href="#">그룹 소개</a></li>
@@ -239,6 +239,6 @@ AK플라자는 애경그룹 지주회사인 AK홀딩스,
 <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
         crossorigin="anonymous"></script>
-<script src="./js/common.js"></script>
+<script src="/js/common.js"></script>
 </body>
 </html>
