--- a/financial_cash2018.html
+++ b/financial_cash2018.html
@@ -17,8 +17,8 @@
     <meta name="og:site_name" content="AK 홀딩스 현금흐름표" />
     <meta name="og:title" content="AK 홀딩스 현금흐름표" />
     <meta name="og:description" content="AK 홀딩스 홈페이지에 오신걸 환영합니다."/>
-    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <title>2018년 현금흐름표 | AK 홀딩스</title>
 </head>
 <body>
@@ -28,7 +28,7 @@
 <!-- End Google Tag Manager (noscript) -->
 <header>
     <div class="head">
-        <h1><a href="#"><img src="./images/logo_w.png" alt="AK 홀딩스 로고"><img src="./images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
+        <h1><a href="#"><img src="/images/logo_w.png" alt="AK 홀딩스 로고"><img src="/images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
         <div class="quick-menu">
             <ul>
                 <li><a href="#">그룹 소개</a></li>
@@ -172,8 +172,8 @@
         <div class="top-tab">
             <ul>
                 <!-- active: 활성화시 li에 .active 추가 -->
-                <li><a href="http://jdcomp.pw/financial_income2021.html">재무상태표</a></li>
-                <li><a href="http://jdcomp.pw/financial_statement2021.html">손익계산서</a></li>
+                <li><a href="/financial_income2021.html">재무상태표</a></li>
+                <li><a href="/financial_statement2021.html">손익계산서</a></li>
                 <li class="active"><a href="javascript:;">현금흐름표</a></li>
             </ul>
         </div>
@@ -186,11 +186,11 @@
         <strong class="cont_tit">AK홀딩스㈜</strong>
         <div class="tab-wrap">
             <ul class="tab">
-                <li><a href="http://jdcomp.pw/financial_cash2021.html">2021년</a></li>
-                <li><a href="http://jdcomp.pw/financial_cash2020.html">2020년</a></li>
-                <li><a href="http://jdcomp.pw/financial_cash2019.html">2019년</a></li>
+                <li><a href="/financial_cash2021.html">2021년</a></li>
+                <li><a href="/financial_cash2020.html">2020년</a></li>
+                <li><a href="/financial_cash2019.html">2019년</a></li>
                 <li><a href="javascript:;" class="active">2018년</a></li>
-                <li><a href="http://jdcomp.pw/financial_cash2017.html">2017년</a></li>
+                <li><a href="/financial_cash2017.html">2017년</a></li>
             </ul>
             <div class="tab-cont-wrap">
                 <!--2018년-->
