--- a/main.html
+++ b/main.html
@@ -17,9 +17,9 @@
     <meta name="og:site_name" content="AK 홀딩스" />
     <meta name="og:title" content="AK 홀딩스" />
     <meta name="og:description" content="앞서가는 사고, 앞서가는 기술, 앞서가는 경영"/>
-    <meta property="og:image" content="http://jdcomp.pw/og_thumb.png" />
-    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <meta property="og:image" content="/og_thumb.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <title>AK 홀딩스</title>
 </head>
 <body>
@@ -30,13 +30,13 @@
 
 <header class="main-top">
     <div class="head">
-        <h1><a href="http://jdcomp.pw"><img src="./images/logo_w.png" alt="AK 홀딩스 로고"><img src="./images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
+        <h1><a href=""><img src="/images/logo_w.png" alt="AK 홀딩스 로고"><img src="/images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
         <div class="quick-menu">
             <ul>
-                <li><a href="http://jdcomp.pw/introduce_ceo.html">그룹 소개</a></li>
-                <li><a href="http://jdcomp.pw/esg_management_goal.html">애경 ESG</a></li>
-                <li><a href="http://jdcomp.pw/ak_news.html">뉴스룸</a></li>
-                <li><a href="http://jdcomp.pw/ir_governance.html">IR</a></li>
+                <li><a href="/introduce_ceo.html">그룹 소개</a></li>
+                <li><a href="/esg_management_goal.html">애경 ESG</a></li>
+                <li><a href="/ak_news.html">뉴스룸</a></li>
+                <li><a href="/ir_governance.html">IR</a></li>
             </ul>
         </div>
         <button class="btn-show-menu" id="btnShowMenu" />
@@ -49,23 +49,23 @@
                     <li>
                         <ul>
                             <!-- 메뉴 활성화시 아래 li에 .active 추가 -->
-                            <li><a href="http://jdcomp.pw/value_founded.html">애경 가치</a></li>
-                            <li><a href="http://jdcomp.pw/value_founded.html">창업이념</a></li>
-                            <li><a href="http://jdcomp.pw/value_management">경영이념</a></li>
-                            <li><a href="http://jdcomp.pw/value_talent">인재상</a></li>
+                            <li><a href="/value_founded.html">애경 가치</a></li>
+                            <li><a href="/value_founded.html">창업이념</a></li>
+                            <li><a href="/value_management">경영이념</a></li>
+                            <li><a href="/value_talent">인재상</a></li>
                             <li class="tow-nd"><a href="#">가치체계도</a></li>
                             <li class="tow-nd"><a href="#">미션과 비전</a></li>
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="http://jdcomp.pw/introduce_ci.html">Corporate Identity</a></li>
-                            <li><a href="http://jdcomp.pw/introduce_ci.html">의미</a></li>
+                            <li><a href="/introduce_ci.html">Corporate Identity</a></li>
+                            <li><a href="/introduce_ci.html">의미</a></li>
                             <li class="tow-nd"><a href="#">로고 규정</a></li>
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="http://jdcomp.pw/introduce_ceo.html">회사 소개</a></li>
-                            <li><a href="http://jdcomp.pw/introduce_ceo.html">CEO Message</a></li>
+                            <li><a href="/introduce_ceo.html">회사 소개</a></li>
+                            <li><a href="/introduce_ceo.html">CEO Message</a></li>
                             <li class="tow-nd"><a href="#">홀딩스 역할</a></li>
                             <li class="tow-nd"><a href="#">거버넌스 구조</a></li>
                         </ul>
@@ -74,7 +74,7 @@
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="http://jdcomp.pw/introduce_history.html">연혁</a></li>
+                            <li><a href="/introduce_history.html">연혁</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -84,16 +84,16 @@
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="http://jdcomp.pw/esg_management_goal.html">ESG 경영</a></li>
-                            <li><a href="http://jdcomp.pw/esg_management_goal.html">ESG 경영 목표</a></li>
-                            <li><a href="http://jdcomp.pw/esg_management_level.html">ESG 등급</a></li>
+                            <li><a href="/esg_management_goal.html">ESG 경영</a></li>
+                            <li><a href="/esg_management_goal.html">ESG 경영 목표</a></li>
+                            <li><a href="/esg_management_level.html">ESG 등급</a></li>
                             <li class="tow-nd"><a href="#">다양성과 포용성</a></li>
                             <li class="tow-nd"><a href="#">ESG 추진체계(조직)</a></li>
                             <li class="tow-nd"><a href="#">지속가능경영 보고서</a></li>
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="http://jdcomp.pw/esg_news.html">ESG 소식</a></li>
+                            <li><a href="/esg_news.html">ESG 소식</a></li>
                         </ul>
                         <ul class="tow-nd">
                             <li><a href="#">윤리경영</a></li>
@@ -110,7 +110,7 @@
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="http://jdcomp.pw/ak_news.html">애경뉴스</a></li>
+                            <li><a href="/ak_news.html">애경뉴스</a></li>
                         </ul>
                         <ul class="tow-nd">
                             <li><a href="#">웹진</a></li>
@@ -131,28 +131,28 @@
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="http://jdcomp.pw/ir_governance.html">지배구조</a></li>
-                            <li><a href="http://jdcomp.pw/ir_governance.html">기업지배구조</a></li>
+                            <li><a href="/ir_governance.html">지배구조</a></li>
+                            <li><a href="/ir_governance.html">기업지배구조</a></li>
                             <li class="tow-nd"><a href="#">기업지배구조헌장</a></li>
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="http://jdcomp.pw/financial_income2021.html">재무정보</a></li>
-                            <li><a href="http://jdcomp.pw/financial_income2021.html">재무상태표</a></li>
-                            <li><a href="http://jdcomp.pw/financial_statement2021.html">손익계산서</a></li>
-                            <li><a href="http://jdcomp.pw/financial_cash2021.html">현금흐름표</a></li>
+                            <li><a href="/financial_income2021.html">재무정보</a></li>
+                            <li><a href="/financial_income2021.html">재무상태표</a></li>
+                            <li><a href="/financial_statement2021.html">손익계산서</a></li>
+                            <li><a href="/financial_cash2021.html">현금흐름표</a></li>
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="http://jdcomp.pw/investment_info.html">공시정보</a></li>
-                            <li><a href="http://jdcomp.pw/investment_info.html">공시자료</a></li>
-                            <li><a href="http://jdcomp.pw/investment_info_list.html">공고</a></li>
+                            <li><a href="/investment_info.html">공시정보</a></li>
+                            <li><a href="/investment_info.html">공시자료</a></li>
+                            <li><a href="/investment_info_list.html">공고</a></li>
                         </ul>
                         <em></em>
                         <ul>
-                            <li><a href="http://jdcomp.pw/ir_contact.html">IR 정보</a></li>
-                            <li><a href="http://jdcomp.pw/ir_contact.html">Contact IR</a></li>
-                            <li><a href="http://jdcomp.pw/ir_business.html">사업보고서</a></li>
+                            <li><a href="/ir_contact.html">IR 정보</a></li>
+                            <li><a href="/ir_contact.html">Contact IR</a></li>
+                            <li><a href="/ir_business.html">사업보고서</a></li>
                             <li class="tow-nd"><a href="#">감사보고서</a></li>
                         </ul>
                     </li>
@@ -164,12 +164,12 @@
 <main class="main">
     <section class="top-visual">
         <div class="video-box">
-            <video playsinline muted autoplay loop poster="./videos/Mo_AK_Main.mp4" class="mo">
-                <source src="./videos/Mo_AK_Main.mp4" type="video/mp4">
+            <video playsinline muted autoplay loop poster="/videos/Mo_AK_Main.mp4" class="mo">
+                <source src="/videos/Mo_AK_Main.mp4" type="video/mp4">
                 <strong>Your browser does not support the video tag.</strong>
             </video>
-            <video playsinline muted autoplay loop poster="./videos/Web_AK_Main_000.jpg" class="pc">
-                <source src="./videos/Web_AK_Main.mp4" type="video/mp4">
+            <video playsinline muted autoplay loop poster="/videos/Web_AK_Main_000.jpg" class="pc">
+                <source src="/videos/Web_AK_Main.mp4" type="video/mp4">
                 <strong>Your browser does not support the video tag.</strong>
             </video>
         </div>
@@ -190,7 +190,7 @@
         <div class="news-top">
             <h2>#NEWSROOM</h2>
             <div class="btn-box">
-                <h3><a href="http://jdcomp.pw/ak_news.html">애경뉴스</a></h3>
+                <h3><a href="/ak_news.html">애경뉴스</a></h3>
                 <h3 class="tow-nd"><a href="#">웹진</a></h3>
             </div>
         </div>
@@ -230,8 +230,8 @@
         <div class="esg-top">
             <h2>#ESG</h2>
             <div class="btn-box">
-                <h3><a href="http://jdcomp.pw/esg_management_goal.html">ESG 경영</a></h3>
-                <h3><a href="http://jdcomp.pw/esg_news.html">ESG 소식</a></h3>
+                <h3><a href="/esg_management_goal.html">ESG 경영</a></h3>
+                <h3><a href="/esg_news.html">ESG 소식</a></h3>
                 <h3 class="tow-nd"><a href="#">윤리경영</a></h3>
                 <h3 class="tow-nd"><a href="#">애경복지재단</a></h3>
             </div>
@@ -239,19 +239,19 @@
         <div class="esg-list">
             <ul>
                 <li>
-                    <a href="http://jdcomp.pw/esg_management_goal.html">
+                    <a href="/esg_management_goal.html">
                         <div>
                             <h4>ESG 경영 목표</h4>
                             <p class="con">지속가능한 사회를 구축하는데<br>
                                 앞장서겠습니다</p>
                             <p class="img">
-                                <img src="./images/bg_main_esg_list01.png" alt="" class="mo">
+                                <img src="/images/bg_main_esg_list01.png" alt="" class="mo">
                             </p>
                         </div>
                     </a>
                 </li>
                 <li>
-                    <a href="http://jdcomp.pw/esg_news.html">
+                    <a href="/esg_news.html">
                         <div>
                             <h4>ESG 소식</h4>
                             <p class="con">각 계열사만의 특성을 발휘하여,<br>
@@ -283,7 +283,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
         crossorigin="anonymous"></script>
-<script src="./js/common.js"></script>
+<script src="/js/common.js"></script>
 <script>
 
     //init
